# gemma-trajad-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/trajectory_explorer/: README.md  app.js  index.html
data/processed/: build_manifest.json  perturbation_diagnostics.json
dataset_builder/: __init__.py  audit_dataset.py  build_trajad_dataset.py  coherence.py  download_hermes.py  inspect_traces.py  normalize_trajectory.py  perturbation_diagnostics.py  perturbations.py  trajectory_explorer_payload.py  validate_labels.py
docs/: binary-sft-handoff.md  codebase-baseline.md  data-pipeline-walkthrough.md  dataset-builder-data-contract.md  dataset_builder_learning_plan.md  deferred-training-roadmap.md  evaluation-plan.md  execution-topology.md  labeling-guidelines.md  project-spec.md  training-smoke-test-audit.md
docs/infographics/: gemma-trajad-project-overview.html
docs/plans/: 2026-04-17-hermes-first-roadmap.md  2026-04-17-hermes-pivot.md  (+5 more)
integrations/: langfuse_demo.py  phoenix_openinference_demo.py  smolagents_demo.py
prompts/: anomaly_binary.txt  anomaly_joint.txt  anomaly_localize.txt
scripts/: bootstrap_dataset_builder.sh  export_trajectory_explorer_payload.py
tests/: test_audit_dataset.py  test_build_manifest.py  test_build_trajad_dataset.py  test_coherence.py  test_inspect_traces.py  test_normalize_trajectory.py  test_perturbation_diagnostics.py  test_perturbations.py  test_train_e2b.py  test_trajectory_explorer_payload.py  test_validate_labels.py
training/: evaluate.py  inference.py  prepare_sft_data.py  train_e2b.py  train_e4b.py
wiki/: SCHEMA.md  index.md  log.md
(+240 files in other folders)
