[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gemma-trajad-eval"
version = "0.1.0"
description = "Local trajectory anomaly detection for tool-using agents with Gemma 4 E2B"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    # Dataset
    "datasets>=2.19",
    "huggingface_hub>=0.23",

    # Data processing
    "jsonlines>=4.0",
    "tqdm>=4.66",
    "pydantic>=2.7",

    # Tokenization
    "transformers>=4.41",
    "tokenizers>=0.19",

    # Evaluation
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Local Mac training (Apple Silicon)
mlx = [
    "mlx>=0.14",
    "mlx-lm>=0.14",
]

# Cloud training (NVIDIA GPU)
cuda = [
    "torch>=2.3",
    "unsloth>=2024.5",
    "trl>=0.9",
    "peft>=0.11",
    "bitsandbytes>=0.43",
]

# Integrations
integrations = [
    "langfuse>=2.0",
    "arize-phoenix>=4.0",
    "openinference-semantic-conventions>=0.1",
    "smolagents>=1.0",
]

# Notebooks
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "seaborn>=0.13",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
